--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
